--- a/Develop/assets/style.css
+++ b/Develop/assets/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 1;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
@@ -40,6 +40,7 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  font-size: 20px;
 }
 
 .past {
@@ -69,3 +70,10 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+
+#app-claendar {
+  display: CanvasGradient;
+  grid-template-columns: 1fr
+}
+  
